--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<img src="rakmalit.jpg">
-	<img src="idola.jpg>
+	<img src="idola.jpg">
 	<h1>My Biodata</h1>
 	<p>Hellooo!!! My name is Raffa Muhammad Akmal and I am usually called Raffa. I am 17 years old. I was born in Qatar but I now live in Indonesia. I also love to play sports and video games. My favorite quote is: “The only disability in life is a bad attitude”</p>
 <li>Name: Raffa Muhammad Akmal</li>
