--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rafa's Biodata</title>
+	<title>Raffa's Biodata</title>
 	<link rel="stylesheet" type="text/css" href="rafa.css">
 </head>
 <body>
